# llm

./: .dockerignore  .env.dev  .env.gh  .env.hpc  .env.local  .env.pel  .gitignore  .mypy.ini  .mypy.ini.prod  .pylintrc.dev  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README.md  README.rst  api.make  backup.make  docker.make  docker_test.py  exclude.lst  git.make  hpc.init  hpc.make  py.make  pyproject.toml  requirements.txt
.github/workflows/: container.yml  main.yml  pylint.yml  pypi.yml
llm/: init.py
llm/evaluate/: gsm8k.py  gsm8k_kivi.py  mmlu.py
llm/helpers/: profiling.py
llm/models/gpt/: GPT2.py  GPT2Config.py  README.md  exp1_place.py  exp2_contiguity.py  inference.py
llm/models/llama/: README.md  inference.py  note1_load_model.ipynb  tokenizer.py
notebooks/: init.ipynb  note.ipynb
output/ex1/allenai_OLMo-1.7-7B-hf_2024-07-22_01-23-58/: results.json  unsuccessful_responses.csv
output/ex1/meta-llama_Llama-2-7b-chat-hf_2024-07-22_10-45-27/: results.json  successful_responses.csv  unsuccessful_responses.csv
output/ex1/meta-llama_Llama-2-7b-hf_2024-07-22_08-02-13/: results.json  successful_responses.csv  unsuccessful_responses.csv
output/ex1/meta-llama_Meta-Llama-3-8B-Instruct_2024-07-22_14-55-32/: results.json  successful_responses.csv  unsuccessful_responses.csv
output/ex1/meta-llama_Meta-Llama-3-8B_2024-07-22_11-57-01/: results.json  (+2 more)
pkg/: app.py  args.py  gpu.py  sample.py  test_app.py
pkg/utility/: custom_type.py  reader.py
scripts/: generate_mock_data.sh  init  upgrade_dependencies.sh
scripts/.githooks/: pre-commit
(+53 files in other folders)
